# PhdUtility

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_and_install.sh
SymbolicOperators/: CMakeLists.txt  Makefile  SymbolicOperatorsConfig.cmake.in
SymbolicOperators/cmake/: ClusterCompilerFlags.cmake  SymbolicOperatorsConfig.cmake.in
SymbolicOperators/include/SymbolicOperators/: Coefficient.hpp  IndexWrapper.hpp  KroneckerDelta.hpp  KroneckerDeltaUtility.hpp  Momentum.hpp  MomentumList.hpp  Operator.hpp  SymbolicSum.hpp  Term.hpp  WickOperator.hpp  WickOperatorTemplate.hpp  WickSymmetry.hpp  WickTerm.hpp
SymbolicOperators/include/mrock/SymbolicOperators/: Coefficient.hpp  IndexWrapper.hpp  KroneckerDelta.hpp  KroneckerDeltaUtility.hpp  Momentum.hpp  MomentumList.hpp  Operator.hpp  OperatorType.hpp  SymbolicSum.hpp  Term.hpp  TermLoader.hpp  Wick.hpp  WickOperator.hpp  WickOperatorTemplate.hpp  WickSymmetry.hpp  WickTerm.hpp
SymbolicOperators/src/: Coefficient.cpp  IndexWrapper.cpp  Momentum.cpp  MomentumList.cpp  Operator.cpp  OperatorType.cpp  Term.cpp  TermLoader.cpp  Wick.cpp  WickOperator.cpp  WickOperatorTemplate.cpp  WickSymmetry.cpp  WickTerm.cpp
SymbolicOperators/tests/: CMakeLists.txt  compare_test.hpp  continuum.cpp
Utility/: CMakeLists.txt  Makefile  utility_info.h.in
Utility/cmake/: UtilityConfig.cmake.in  UtilityInformation.cmake  utility_info.h.in
Utility/include/Utility/: ComplexNumberIterators.hpp  ConstexprPower.hpp  Fractional.hpp  FunctionTime.hpp  InputFileReader.hpp  OutputConvenience.hpp  OutputWriter.hpp  VectorWrapper.hpp  better_to_string.hpp  print_type.hpp
Utility/include/Utility/Numerics/: BlockDiagonalMatrix.hpp  Interpolation.hpp  PivotToBlockStructure.hpp  Resolvent.hpp
Utility/include/Utility/Selfconsistency/: BroydenSolver.hpp  IterativeSolver.hpp
Utility/include/mrock/Utility/: BinaryIO.hpp  ComplexNumberIterators.hpp  ConstexprPower.hpp  Fractional.hpp  FunctionTime.hpp  InputFileReader.hpp  IsComplex.hpp  IsSpecializationOf.hpp  LaTeXOutput.hpp  OutputConvenience.hpp  OutputWriter.hpp  RangeUtility.hpp  StringUtility.hpp  UnderlyingFloatingPoint.hpp  VectorWrapper.hpp  better_to_string.hpp  defines_arithmetic_operators.hpp  print_type.hpp
Utility/test/: CMakeLists.txt  block_matrix.cpp  minimization.cpp
Utility/tests/: CMakeLists.txt  block_matrix.cpp  cauchy_principal_value.cpp  function_time.cpp  minimization.cpp
iEoM/: CMakeLists.txt  Makefile  README.md  user_guide.tex
iEoM/cmake/: mrock_iEoM-config.cmake.in  mrock_iEoM_extra_options.cmake
iEoM/include/mrock/iEoM/: GeneralResolvent.hpp  Resolvent.hpp  ResolventDataTypes.hpp  XPResolvent.hpp  XPStartingState.hpp
iEoM/tests/: CMakeLists.txt  bcs_result.hpp  bcs_spectral.py  block_matrix.cpp  ieom_bcs.cpp
symbolic_operators/: CMakeLists.txt  Doxyfile  Makefile  README.md  SymbolicOperatorsConfig.cmake.in  mainpage.dox  user_guide.tex
symbolic_operators/cmake/: CascadelakeCompilerFlags.cmake  DefaultCompilerFlags.cmake  IceCompilerFlags.cmake  IcelakeCompilerFlags.cmake  mrock_symbolic_operators-config.cmake.in
symbolic_operators/docs/html/: Coefficient_8cpp.html  Coefficient_8cpp_source.html  Coefficient_8hpp.html  Coefficient_8hpp_source.html  IndexWrapper_8cpp.html  IndexWrapper_8cpp_source.html  IndexWrapper_8hpp.html  IndexWrapper_8hpp_source.html  KroneckerDeltaUtility_8hpp.html  KroneckerDeltaUtility_8hpp_source.html  KroneckerDelta_8hpp.html  KroneckerDelta_8hpp_source.html  MomentumList_8cpp.html  MomentumList_8cpp_source.html  MomentumList_8hpp.html  MomentumList_8hpp_source.html  MomentumSymbol_8hpp.html  MomentumSymbol_8hpp_source.html  Momentum_8cpp.html  Momentum_8cpp_source.html  Momentum_8hpp.html  Momentum_8hpp_source.html  OperatorType_8cpp.html  OperatorType_8cpp_source.html  OperatorType_8hpp.html  OperatorType_8hpp_source.html  Operator_8cpp.html  Operator_8cpp_source.html  Operator_8hpp.html  Operator_8hpp_source.html  SumContainer_8cpp.html  SumContainer_8cpp_source.html  SumContainer_8hpp.html  SumContainer_8hpp_source.html  SymbolicSum_8hpp.html  SymbolicSum_8hpp_source.html  TermLoader_8cpp.html  TermLoader_8cpp_source.html  TermLoader_8hpp.html  TermLoader_8hpp_source.html  (+243 more)
symbolic_operators/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+66 more)
symbolic_operators/include/mrock/symbolic_operators/: AbstractTerm.hpp  Coefficient.hpp  Commutation  ExpectationValues  Fractional.hpp  IndexWrapper.hpp  KroneckerDelta.hpp  KroneckerDeltaUtility.hpp  Momentum.hpp  MomentumList.hpp  MomentumSymbol.hpp  Operator.hpp  OperatorType.hpp  SerializationHeaders.hpp  SumContainer.hpp  SymbolicSum.hpp  Term.hpp  TermLoader.hpp  Wick.hpp  WickOperator.hpp  WickOperatorTemplate.hpp  (+2 more)
symbolic_operators/sources/: Coefficient.cpp  IndexWrapper.cpp  Momentum.cpp  MomentumList.cpp  Operator.cpp  OperatorType.cpp  SumContainer.cpp  Term.cpp  TermLoader.cpp  Wick.cpp  WickOperator.cpp  WickOperatorTemplate.cpp  WickSymmetry.cpp  WickTerm.cpp
symbolic_operators/tests/: CMakeLists.txt  bcs.cpp  bosons.cpp  compare_test.hpp  continuum.cpp  string_helper.cpp
utility/: CMakeLists.txt  Makefile  README.md
utility/apps/: progress_bar.cpp
utility/cmake/: mrock_utility-config.cmake.in  utility_info.h.in
utility/tests/: CMakeLists.txt  cauchy_principal_value.cpp  function_time.cpp  hypergeometric.cpp  string_utility.cpp  trapezoidal_test.cpp
utility/tests/Numerics/: bisection.cpp  broydens_method.cpp  cauchy_principal_value.cpp  interpolation.cpp  test_setup.cmake
utility/tests/misc/: BinaryIO.cpp  ComplexNumberIterators.cpp  UnderlyingRealType.cpp  better_to_string.cpp  constexpr_power.cpp  test_setup.cmake
(+141 files in other folders)
